--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-<!--                    <img src="img/slider1.jpg" alt="...">-->
-                    <img src="https://via.placeholder.com/1350x628.png" alt="...">
+                    <img src="img/slider1.jpg" alt="...">
                     <div class="carousel-caption">
                         <h1>
                             Beauty & skin
@@ -60,8 +59,7 @@
                     </div>
                 </div>
                 <div class="item">
-<!--                    <img src="img/slider2.jpg" alt="...">-->
-                    <img src="https://via.placeholder.com/1350x628.png" alt="...">
+                    <img src="img/slider2.jpg" alt="...">
                     <div class="carousel-caption">
                         <h1>
                             Beauty & skin
@@ -75,8 +73,7 @@
                     </div>
                 </div>
                 <div class="item">
-<!--                    <img src="img/slider3.jpg" alt="...">-->
-                    <img src="https://via.placeholder.com/1350x628.png" alt="...">
+                    <img src="img/slider3.jpg" alt="...">
                     <div class="carousel-caption">
                         <h1>
                             Beauty & skin
@@ -189,8 +186,7 @@
                     <div class="row">
 
                         <div class="col-xs-12 col-sm-9 cover-image" data-aos="fade-right">
-<!--                            <img src="img/about.jpg" alt="...">-->
-                            <img src="https://via.placeholder.com/608x415.png" alt="...">
+                            <img src="img/about.jpg" alt="...">
                         </div>
 
                         <div class="col-xs-12 col-sm-3 description-block">
@@ -222,9 +218,7 @@
                     <div class="service">
 
                         <a href="#">
-<!--                            <img src="img/massage-therapy.jpg" alt="...">-->
-                            <img src="https://via.placeholder.com/380x272.png" alt="...">
-
+                            <img src="img/massage-therapy.jpg" alt="...">
                             <div class="animations">
                                 <div class="border">
                                     <div></div>
@@ -249,9 +243,7 @@
                     <div class="service">
 
                         <a href="#">
-<!--                            <img src="img/facials.jpg" alt="...">-->
-                            <img src="https://via.placeholder.com/380x272.png" alt="...">
-
+                            <img src="img/facials.jpg" alt="...">
                             <div class="animations">
                                 <div class="border">
                                     <div></div>
@@ -276,9 +268,7 @@
                     <div class="service">
 
                         <a href="#">
-<!--                            <img src="img/botox.jpg" alt="...">-->
-                            <img src="https://via.placeholder.com/380x272.png" alt="...">
-
+                            <img src="img/botox.jpg" alt="...">
                             <div class="animations">
                                 <div class="border">
                                     <div></div>
@@ -303,9 +293,7 @@
                     <div class="service">
 
                         <a href="#">
-<!--                            <img src="img/waxing.jpg" alt="...">-->
-                            <img src="https://via.placeholder.com/380x272.png" alt="...">
-
+                            <img src="img/waxing.jpg" alt="...">
                             <div class="animations">
                                 <div class="border">
                                     <div></div>
@@ -330,9 +318,7 @@
                     <div class="service">
 
                         <a href="#">
-<!--                            <img src="img/make-up.jpg" alt="...">-->
-                            <img src="https://via.placeholder.com/380x272.png" alt="...">
-
+                            <img src="img/make-up.jpg" alt="...">
                             <div class="animations">
                                 <div class="border">
                                     <div></div>
@@ -357,9 +343,7 @@
                     <div class="service">
 
                         <a href="#">
-<!--                            <img src="img/manicure.jpg" alt="...">-->
-                            <img src="https://via.placeholder.com/380x272.png" alt="...">
-
+                            <img src="img/manicure.jpg" alt="...">
                             <div class="animations">
                                 <div class="border">
                                     <div></div>
@@ -393,8 +377,7 @@
 
                 <div class="col-xs-12 col-sm-6">
                     <a href="img/gallery6.jpg">
-<!--                        <img src="img/gallery6-thumbnail.jpg" alt="Gallery Image 1"/>-->
-                        <img src="https://via.placeholder.com/555x400.png" alt="Gallery Image 1"/>
+                        <img src="img/gallery6-thumbnail.jpg" alt="Gallery Image 1"/>
                         <div class="hover">
                             <i class="fa fa-search-plus" aria-hidden="true"></i>
                         </div>
@@ -407,8 +390,7 @@
 
                         <div class="col-xs-12">
                             <a href="img/gallery5.jpg">
-<!--                                <img src="img/gallery5-thumbnail.jpg" alt="Gallery Image 2" />-->
-                                <img src="https://via.placeholder.com/555x185.png" alt="Gallery Image 2" />
+                                <img src="img/gallery5-thumbnail.jpg" alt="Gallery Image 2" />
                                 <div class="hover">
                                     <i class="fa fa-search-plus" aria-hidden="true"></i>
                                 </div>
@@ -416,8 +398,7 @@
                         </div>
                         <div class="col-xs-12">
                             <a href="img/gallery3.jpg">
-<!--                                <img src="img/gallery3-thumbnail.jpg" alt="Gallery Image 3" />-->
-                                <img src="https://via.placeholder.com/555x185.png" alt="Gallery Image 3" />
+                                <img src="img/gallery3-thumbnail.jpg" alt="Gallery Image 3" />
                                 <div class="hover">
                                     <i class="fa fa-search-plus" aria-hidden="true"></i>
                                 </div>
@@ -430,8 +411,7 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <a href="img/gallery1.jpg">
-<!--                        <img src="img/gallery1-thumbnail.jpg" alt="Gallery Image 4" />-->
-                        <img src="https://via.placeholder.com/360x204.png" alt="Gallery Image 4" />
+                        <img src="img/gallery1-thumbnail.jpg" alt="Gallery Image 4" />
                         <div class="hover">
                             <i class="fa fa-search-plus" aria-hidden="true"></i>
                         </div>
@@ -439,8 +419,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <a href="img/gallery2.jpg">
-<!--                        <img src="img/gallery2-thumbnail.jpg" alt="Gallery Image 5" />-->
-                        <img src="https://via.placeholder.com/360x204.png" alt="Gallery Image 5" />
+                        <img src="img/gallery2-thumbnail.jpg" alt="Gallery Image 5" />
                         <div class="hover">
                             <i class="fa fa-search-plus" aria-hidden="true"></i>
                         </div>
@@ -448,8 +427,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <a href="img/gallery4.jpg">
-<!--                        <img src="img/gallery4-thumbnail.jpg" alt="Gallery Image 6" />-->
-                        <img src="https://via.placeholder.com/360x204.png" alt="Gallery Image 6" />
+                        <img src="img/gallery4-thumbnail.jpg" alt="Gallery Image 6" />
                         <div class="hover">
                             <i class="fa fa-search-plus" aria-hidden="true"></i>
                         </div>
